--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -85,3 +85,9 @@ footer {
     font-weight: bold;
     margin-bottom: 10px;
 }
+
+.subtitle {
+    font-size: 16px;
+    line-height: 1.5;
+    margin: 100px 0;
+}
